--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "pure-vit",
+  "name": "cooking-list",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://github.com/hamid-js/cooking-list/",
   "scripts": {
-    "predeploy": "npm run build",
- "deploy": "gh-pages -d build",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && gh-pages -d build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
